Unit_3/Debugging/3.4/Instructions.md
# Debugging Exercise 3.

## How to Use the Code Editor

1. Select the "Run Code" button to execute the program.
2. Select the "Calculate Grade" button to generate a score based on the completed tasks.
3. Continue to modify, run, and calculate your code until you are happy with the grade.
4. Select the "Submit" button to turn in the assignment to your instructor.

## Book Instructions

The files provided contain syntax and/or logic errors. In each case, determine and fix the problem, remove all syntax and coding errors, and run the program to ensure it works properly.

## Companion Instructions

The files provided in the code editor to the right contain syntax and/or logic errors. In each case, determine and fix the problem, remove all syntax and coding errors, and run the program to ensure it works properly.

An example of the program is shown below:

```
Enter credits for first student >> 18
Enter credits for second student >> 30
Total due for student #1 is $1365.1200000000001
Total due for student #2 is $2275.2000000000003
```

## Grading Criterion

Tasks

**Task 1:** The `DebugThree4` class compiles without error.
**Task 2:** The `computeTuitionBill()` method computes and displays the correct tuition bill.
**Task 3:** The `DebugThree4` program accepts user input and displays the correct output.
